# extended-compose

./: .gitignore  README.md  extended-compose.cabal  package.yaml
src/Control/Function/: ExtendedCompose.hs  ExtendedCompose.lhs
test/: Spec.hs
