name:                extended-compose
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bjaress/extended-compose#readme
license:             PublicDomain
license-file:        LICENSE
author:              Brian Jaress
maintainer:          bjaress@gmail.com
copyright:           2017 Brian Jaress
category:            Composition
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Function.ExtendedCompose
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite extended-compose-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , extended-compose
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bjaress/extended-compose
